--- a/build.yaml
+++ b/build.yaml
@@ -22,9 +22,9 @@ include:
   - board: nice_nano_v2
     shield: rolio_left nice_view
     snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y -DEXTRA_CONF_FILE=../../config/rolio-nice_view.conf
+    cmake-args: -DCONFIG_ZMK_STUDIO=y -DEXTRA_CONF_FILE=../../config/rolio_nv.conf
     artifact-name: zmk-rolio461-nicenano_v2-nice_view-left
   - board: nice_nano_v2
     shield: rolio_right nice_view
-    cmake-args: -DEXTRA_CONF_FILE=../../config/rolio-nice_view.conf  
+    cmake-args: -DEXTRA_CONF_FILE=../../config/rolio_nv.conf  
     artifact-name: zmk-rolio461-nicenano_v2-nice_view-right
