--- a/config/west.yml
+++ b/config/west.yml
@@ -4,11 +4,21 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: elpekenin
+      url-base: https://github.com/elpekenin
+    - name: MickiusMousius
+      url-base: https://github.com/MickiusMousius
     # Additional modules containing boards/shields/custom code can be listed here as well
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
   projects:
     - name: zmk
       remote: zmkfirmware
       import: app/west.yml
+    - name: zmk-userspace
+      remote: elpekenin
+      revision: main
+    - name: zmk-ls0xxvcom-driver
+      remote: MickiusMousius
+      revision: main
   self:
     path: config
