--- a/config/rolio_nv.conf
+++ b/config/rolio_nv.conf
@@ -10,6 +10,12 @@ CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=y
 # Enable mouse emulation for scroll wheel & click functionality
 CONFIG_ZMK_POINTING=y
 
+# Enable analog input driver for thumbstick mouse movement
+CONFIG_ADC=y
+CONFIG_ADC_ASYNC=y
+CONFIG_INPUT=y
+CONFIG_ANALOG_INPUT=y
+
 # Make Bluetooth stronger
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
